# PROTOCOL-C

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  publish.yml
aether_protocol_c/: __init__.py  audit.py  cli.py  commitment.py  crypto.py  ephemeral_signer.py  execution.py  seed.py  settlement.py  state.py  timestamp_authority.py  verify.py
benchmarks/atlas-hallucination-containment/: README.md  manifest.json  verify_manifest.py
docs/: WHITEPAPER.md  how-it-works.md  integrating.md
examples/: basic_commit.py  batch_commit.py
tests/: test_cli.py  test_cli_demo.py  test_cli_info.py  test_cli_init.py  test_cli_logs.py  test_crypto_clean.py  test_no_residual_L.py  test_packaging.py  test_protocol.py  test_public_api.py  test_seed.py
